# governance

./: .gitignore  Makefile  README.md  citation-gaps.md  citations.md  framework_structure.md  main.py  paper.tex  position-abstract.md  position-conclusion-examiner-test.md  position-conclusion.md  position-opening.md  position-planning.md  position-section2-unrevised.md  position-section2.md  position-section3-comparison.md  position-section3-lending.md  position-section3-underwriting.md  position-section3.md  position-section4-architect.md  position-section4-comparison.md  position-section4-examiner.md  position-section4.md  position-section5.md  position-section6.md  prototype-plan-2026-05-09.md  pyproject.toml  rashomon-routed-decision-methodology.md  references.bib  research-note-rashomon-from-reasoning-traces-2026-05-06.md  section1.tex  section2.tex  section3.tex  section4.tex  section5.tex  section6.tex  section7.tex
docs/: pre-reg-template.md
policy/: README.md  encoder.py  fnma_eligibility_matrix.yaml  synthetic.py  thin_demo_fm.yaml  thin_demo_hmda.yaml
probes/: README.md  aggregate.py  assignment.json  findings_summary.md  handoff.md  handoff_post_review.md  probe.py  reference_block.md  results_20260506_205537.jsonl  run_log.txt  run_recovery.py  run_review.py  scores.md
references/: CRI FS AI RMF Control Objective Reference Guide_Initial Stage_v.1.0.docx  CRI FS AI RMF Guidebook_Initial Stage_v.1.0.docx  CRI FS AI RMF Risk and Control Matrix_Initial Stage_v.1.0.xlsx  CRI-FS-AI-RMF-Adoption-Stage-Questionnaire.v.1.0.docx  FS-AI-RMF-Executive-Summary.docx  (+3 more)
(+254 files in other folders)
